--- a/app/views/user_profiles/_profile_bio.html.haml
+++ b/app/views/user_profiles/_profile_bio.html.haml
@@ -17,7 +17,7 @@
   .span4.horizontal-divider
 .row
   .span4
-    %p
+    %p.user-bio-quote
       ollit banh mi yr gluten-free flexitarian ennui. Wayfarers do
       single-origin coffee raw denim. Biodiesel portland nihil, craft
       beer stumptown next level seitan eiusmod officia trust fund
