--- a/app/views/user_profiles/_profile_bio.html.haml
+++ b/app/views/user_profiles/_profile_bio.html.haml
@@ -1,4 +1,8 @@
 .row.user-profile-bio
+  - if is_current_user?(user)
+    = link_to edit_registration_path(user), class: 'edit-account' do
+      Edit Account Settings
+      %i.icon-double-chevron-right
   .span1
     = image_tag 'chris-large.jpg', class: 'pull-left'
   .span3
