--- a/app/views/user_profiles/_profile_bio.html.haml
+++ b/app/views/user_profiles/_profile_bio.html.haml
@@ -4,7 +4,7 @@
       Edit Account Settings
       %i.icon-double-chevron-right
   .span1
-    = image_tag 'chris-large.jpg', class: 'pull-left'
+    = image_tag user.gravatar_url
   .span3
     %h3= user.name
     %ul.unstyled
