rename profile and add profileView wrapper

--- a/app/views/user_profiles/_profile_bio.html.haml
+++ b/app/views/user_profiles/_profile_bio.html.haml
@@ -6,22 +6,22 @@
   .span1
     = image_tag 'chris-large.jpg', class: 'pull-left'
   .span3
-    %h3= user.name
+    %h3{ data: {attribute: 'profile-name' }}= user.name
     %ul.unstyled
       %li
         %i.icon-map-marker.icon-large
-        = "San Francisco, CA"
+        %span{ data: {attribute: 'profile-location'}}= "San Francisco, CA"
       %li
         %i.icon-globe.icon-large
-        = link_to "delvekitchen.com","http://delvekitchen.com"
+        = link_to "delvekitchen.com","http://delvekitchen.com", data: { attribute: 'profile-website'}
       %li
         %i.icon-calendar.icon-large
-        = "Joined on #{user.created_at.strftime("%m/%d/%y")}"
+        %span= "Joined on #{user.created_at.strftime("%m/%d/%y")}"
 .row
   .span4.horizontal-divider
 .row
   .span4
-    %p.user-bio-quote
+    %p.user-bio-quote{ data: {attribute: 'profile-quote'} }
       ollit banh mi yr gluten-free flexitarian ennui. Wayfarers do
       single-origin coffee raw denim. Biodiesel portland nihil, craft
       beer stumptown next level seitan eiusmod officia trust fund
