--- a/app/views/user_profiles/_profile_bio.html.haml
+++ b/app/views/user_profiles/_profile_bio.html.haml
@@ -10,7 +10,7 @@
     %ul.unstyled
       %li
         %i.icon-map-marker.icon-large
-        %span{ data: {attribute: 'profile-location'}}= "San Francisco, CA"
+        %span{ data: {attribute: 'profile-location'}}= user.location
       %li
         %i.icon-globe.icon-large
         = link_to "delvekitchen.com","http://delvekitchen.com", data: { attribute: 'profile-website'}
