add profile form partial

--- a/app/views/user_profiles/_profile_bio.html.haml
+++ b/app/views/user_profiles/_profile_bio.html.haml
@@ -19,6 +19,7 @@
       %li
         %i.icon-calendar.icon-large
         %span= "Joined on #{user.created_at.strftime("%m/%d/%y")}"
+  = render 'profile_bio_form'
 .row
   .span4.horizontal-divider
 - if user.quote.present?
