--- a/app/views/user_profiles/_profile_bio.html.haml
+++ b/app/views/user_profiles/_profile_bio.html.haml
@@ -1,31 +1,37 @@
-.row.user-profile-bio
-  - if is_current_user?(user)
-    = link_to edit_registration_path(user), class: "edit-account uppercase-link" do
-      Edit Account Settings
-      %i.icon-double-chevron-right
-  .span1
-    = image_tag 'chris-large.jpg', class: 'pull-left'
-  .span3
-    %h3{ data: {attribute: 'profile-name' }}= user.name
-    %ul.unstyled
-      - if user.location.present?
-        %li
-          %i.icon-map-marker.icon-large
-          %span{ data: {attribute: 'profile-location'}}= user.location
-      - if user.website.present?
-        %li
-          %i.icon-globe.icon-large
-          = link_to user.website, user.website, data: { attribute: 'profile-website'}
-      %li
-        %i.icon-calendar.icon-large
-        %span= "Joined on #{user.created_at.strftime("%m/%d/%y")}"
-  = render 'profile_bio_form'
-.row
-  .span4.horizontal-divider
-- if user.quote.present?
+.user-profile-bio
   .row
-    .span4
-      %p.user-bio-quote{ data: {attribute: 'profile-quote'} }= user.quote
-.row
-  .span4.horizontal-divider
+    - if is_current_user?(user)
+      = link_to edit_registration_path(user), class: "edit-account uppercase-link" do
+        Edit Account Settings
+        %i.icon-double-chevron-right
+    .span1
+      = image_tag 'chris-large.jpg', class: 'pull-left'
+    .span3
+      - if is_current_user?(user)
+        .uppercase-link.edit-profile
+          %i.icon-edit.icon-large
+          %span Edit
+      %h3{ data: {attribute: 'profile-name' }}= user.name
+      %ul.unstyled
+        - if user.location.present?
+          %li
+            %i.icon-map-marker.icon-large
+            %span{ data: {attribute: 'profile-location'}}= user.location
+        - if user.website.present?
+          %li
+            %i.icon-globe.icon-large
+            = link_to user.website, user.website, data: { attribute: 'profile-website'}
+        %li
+          %i.icon-calendar.icon-large
+          %span= "Joined on #{user.created_at.strftime("%m/%d/%y")}"
+  .row
+    .span4.horizontal-divider
+  - if user.quote.present?
+    .row
+      .span4
+        %p.user-bio-quote{ data: {attribute: 'profile-quote'} }= user.quote
+  .row
+    .span4.horizontal-divider
 
+- if is_current_user?(user)
+  = render 'profile_bio_form', user: user
