pull form actions to the right

--- a/app/views/user_profiles/_profile_bio_form.html.haml
+++ b/app/views/user_profiles/_profile_bio_form.html.haml
@@ -18,8 +18,9 @@
   .row
     .span4
       %textarea{name: 'quote'}= user.quote
-      %span.edit-profile-cancel.uppercase-link Cancel
-      %span
-        |
-      %span.save-profile.uppercase-link.brick Save
+      .pull-right
+        %span.edit-profile-cancel.uppercase-link Cancel
+        %span
+          |
+        %span.save-profile.uppercase-link.brick Save
 
