--- a/app/views/user_profiles/_profile_bio_form.html.haml
+++ b/app/views/user_profiles/_profile_bio_form.html.haml
@@ -2,7 +2,7 @@
   .row
     .span1
       = link_to 'https://en.gravatar.com/site/signup/', target: '_blank', class: 'change-pic' do
-        = image_tag 'chris-large.jpg', class: 'pull-left'
+        = image_tag user.profile_image_url(default_profile_photo_url), class: 'pull-left'
         .change-pic-label
           Change pic
 
