link to either facebook or gravatar for editing

--- a/app/views/user_profiles/_profile_bio_form.html.haml
+++ b/app/views/user_profiles/_profile_bio_form.html.haml
@@ -1,7 +1,7 @@
 .edit-user-profile
   .row
     .span1
-      = link_to 'https://en.gravatar.com/site/signup/', target: '_blank', class: 'change-pic' do
+      = link_to user.profile_edit_url, target: '_blank', class: 'change-pic' do
         = image_tag user.profile_image_url(default_profile_photo_url), class: 'pull-left'
         .change-pic-label
           Change pic
