--- a/app/views/user_profiles/_profile_bio_form.html.haml
+++ b/app/views/user_profiles/_profile_bio_form.html.haml
@@ -12,7 +12,7 @@
       %ul.unstyled
         %li
           %label.location{ for: 'location'} What is your current hometown?
-          %input#location{type: 'text', name: 'location', value: user.location }
+          %input#location.autocomplete{type: 'text', name: 'location', value: user.location }
         %li
           %label.website{ for: 'website'} What is your personal website/blog?
           %input#website{type: 'text', name: 'website', value: user.website }
