--- a/app/views/user_profiles/_profile_bio.html.haml
+++ b/app/views/user_profiles/_profile_bio.html.haml
@@ -5,7 +5,7 @@
         Edit Account Settings
         %i.icon-double-chevron-right
     .span1
-      = image_tag user.profile_image_url(default_profile_photo_url)
+      = image_tag user_presenter.profile_image_url()
     .span3
       - if is_current_user?(user)
         .uppercase-link.edit-profile
