--- a/app/views/user_profiles/_profile_bio_form.html.haml
+++ b/app/views/user_profiles/_profile_bio_form.html.haml
@@ -1,7 +1,7 @@
 .edit-user-profile
   .row
     .span4
-      -if ! user.chef_type?
+      -unless user.chef_type?
         :markdown
           #{encourage_profile.copy.to_s}
 
